# PlexNFSWatchdog

./: .env.example  .gitignore  Dockerfile  README.md  compose.yml  launch.sh  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: docker-build.yml  python-publish.yml
src/plex_nfs_watchdog/: plex_nfs_watchdog.py
src/plex_nfs_watchdog/modules/config/: shared.py
src/plex_nfs_watchdog/modules/plex/: plex_agent.py
src/plex_nfs_watchdog/modules/watchdog/: plex_watchdog_event.py
