[metadata]
name = plex-nfs-watchdog
version = attr: plex_nfs_watchdog.modules.config.shared.VERSION
author = LightDestory
author_email = apb231@gmail.com
description = A utility to trigger Plex partial-scans on NFS configurations, on which inotify is not supported
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/LightDestory/PlexNFSWatchdog
project_urls =
    Bug Tracker = https://github.com/LightDestory/PlexNFSWatchdog/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Typing :: Typed

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
    plex-nfs-watchdog = plex_nfs_watchdog.plex_nfs_watchdog:main

[options.packages.find]
where = src